--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
 # Site settings
-email: 
+email: "soso2501@gmail.com"
 baseurl: ""
 paginate: 5
 paginate_path: "/blog/page-:num"
 google_analytics: 
 
 # SEO settings
-title: Trophy
-description: 
+title: Fade Temple
+description: 枯燥乏味，愤世嫉俗，灵光乍现，铭之
 url: ""
 twitter_username: 
 default_img: 
 
 # Profile settings
-name: 
+name: 小差小差
 profile_img: 
 profile: 
 social:
-  github: 
+github: https://github.com/xiaochai
 
 # Build settings
 include: ["_categories"]
